<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/sigup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/general_back_icon"
            android:padding="5dp"
            android:transitionName="transition_back_arrow_btn"/>

        <TextView
            android:id="@+id/signup_tittle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear"
            android:textColor="@color/colorSecondary"
            android:textSize="40sp"
            android:fontFamily="@font/abril_fatface"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:transitionName="transition_tittle_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorSecondary"
                app:hintTextColor="@color/colorSecondary"
                android:textColorHint="@color/colorSecondary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorSecondary"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="15dp"

                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="-55dp"
                android:src="@drawable/registerlapiz"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorSecondary"
                app:hintTextColor="@color/colorSecondary"
                android:textColorHint="@color/colorSecondary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorSecondary"
                app:boxStrokeWidthFocused="2dp"
                android:layout_marginStart="53dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="20dp">




                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="-55dp"
                android:src="@drawable/registerusuario"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorSecondary"
                app:hintTextColor="@color/colorSecondary"
                android:textColorHint="@color/colorSecondary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorSecondary"
                app:boxStrokeWidthFocused="2dp"
                android:layout_marginStart="53dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="20dp">



                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="-55dp"
                android:src="@drawable/registercorreo"/>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorSecondary"
                app:hintTextColor="@color/colorSecondary"
                android:textColorHint="@color/colorSecondary"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorSecondary"
                app:endIconTint="@color/colorSecondary"
                app:boxStrokeWidthFocused="2dp"
                android:layout_marginStart="53dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="20dp">




                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="-55dp"
                android:src="@drawable/registerphoneee"/>


        </LinearLayout>

        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:backgroundTint="@color/colorSecondary"
            android:onClick="callNextSignUpScreen"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_next_btn"/>

        <Button
            android:id="@+id/signup_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/black"
            android:textColor="@color/colorSecondary"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_login_btn"/>

    </LinearLayout>
</ScrollView>