<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".AllCategories">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/black">

            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/general_back_icon"
                android:padding="15dp"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/general_search_icon"
                android:padding="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EQUIPO"
            android:textSize="35dp"
            android:textColor="@color/black"
            android:fontFamily="@font/bungee_inline"
            android:padding="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/black"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembroUno"
                    android:textSize="28sp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/colorSecondary"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembrosDescripcion"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/jefe"
                android:layout_marginTop="-0dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorSecondary">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/senora"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembroDos"
                    android:textSize="30sp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/black"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembrosDescripcion"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorSecondary">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/maestro"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembroTres"
                    android:textSize="24sp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/black"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembrosDescripcion"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorSecondary">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/free"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembroCuatro"
                    android:textSize="24sp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/black"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembrosDescripcion"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/black"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembroCinco"
                    android:textSize="28sp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/colorSecondary"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembrosDescripcion"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/sof"
                android:layout_marginTop="-0dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/black"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembroSeis"
                    android:textSize="28sp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/colorSecondary"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembrosDescripcion"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/oti"
                android:padding="10dp"
                android:layout_marginTop="-0dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorSecondary">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/vane"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembroSiete"
                    android:textSize="24sp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:textColor="@color/black"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miembrosDescripcion"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>











    </LinearLayout>
</ScrollView>